--- a/signup.css
+++ b/signup.css
@@ -113,3 +113,17 @@ input[type=number] {
     width: 360px;
     margin-top: 30px;
 }
+
+@media screen and (max-width:490px) {
+    .logo-div {
+        /* margin-left: -10% !important; */
+        width: 55vh !important;
+        margin: 0;
+    }
+
+    .login-form {
+        width: 55vh !important;
+        margin: 0;
+
+    }
+}
