--- a/landing.css
+++ b/landing.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(images/landingfor\ flyhiimg.jpg);
     position: absolute;
+    width: 90% !important;
 }
 
 .welcome-div {
@@ -13,7 +14,7 @@ body {
     font-size: 30px;
     font-weight: 700;
     margin-top: 40vh;
-    margin-left: 500px;
+    margin-left: 250px;
     text-align: center;
 
 }
@@ -22,7 +23,7 @@ body {
     color: wheat;
     font-size: 15px;
     font-weight: 700;
-    margin-left: 500px;
+    margin-left: 250px;
     text-align: center;
 }
 
@@ -70,6 +71,7 @@ button {
 
     body {
         overflow-x: hidden;
+        width: 400px !important;
     }
 
     .welcome-div {
