--- a/login.css
+++ b/login.css
@@ -11,7 +11,6 @@ body {
     border-radius: 15px;
     text-align: center;
     padding-top: 5px;
-    position: absolute;
     color: white;
     text-transform: capitalize;
     font-size: 30px;
@@ -27,7 +26,7 @@ body {
 
 .login-form {
     background-color: white !important;
-    width: 65vh !important;
+    width: 30vw !important;
     height: 70vh;
     margin-left: 0%;
     border-radius: 15px;
@@ -64,13 +63,20 @@ body {
 @media screen and (max-width:490px) {
     .logo-div {
         /* margin-left: -10% !important; */
-        width: 55vh !important;
+        width: 100vw!important;
         margin: 0;
+        border-radius: 0px;
+        height: 10vh;
     }
 
     .login-form {
-        width: 55vh !important;
+        width: 100vw !important;
         margin: 0;
-
+        border-radius: 0px;
+        height: 350px;
+        position: absolute;
+        top: 50% !important;
+        left: 50%;
+        transform: translate(-50%,-50%);
     }
 }
